# SimpleTodoList

./: README.md
SimpleTodoList/app/: build.gradle
SimpleTodoList/app/src/main/: AndroidManifest.xml
SimpleTodoList/app/src/main/cpp/: CMakeLists.txt  daily_quote.cpp
SimpleTodoList/app/src/main/java/com/example/simpletodolist/: AddActivity.kt  MainActivity.kt  Model.kt  RvAdapter.kt  SQLiteDataBaseHelper.kt
SimpleTodoList/app/src/main/res/layout/: activity_add.xml  activity_main.xml  adapter_item_layout.xml
SimpleTodoList/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
SimpleTodoList/gradle/wrapper/: gradle-wrapper.properties
